# poc-gradio

./: .gitignore  .pre-commit-config.yaml  README.md  agent.py  dev.sh  main.py  pyproject.toml
reflex-app/assets/: custom.css
reflex-app/reflex_app/: agent.py  models.py  reflex_app.py  state.py  style.py
